@@ -1,5 +1,10 @@
 2000-06-23  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/dialog-utils.c (gnc_window_adjust_for_screen): new
+	function. if the window size is bigger than the screen, adjust
+	it down. Use this for the account add and edit, reconcile, and
+	register windows.
+
 	* doc/html/C/projects.html: update last version info
 
 	* doc/html/C/xacc-about.html: update last version info
